// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PostsPlaceholder 1`] = `
Array [
  <View
    style={
      Array [
        undefined,
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#efefef",
            "borderRadius": 10,
            "height": 20,
            "width": 20,
          },
          Object {
            "backgroundColor": undefined,
            "marginRight": 10,
          },
          Object {
            "overflow": "hidden",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#dfdfdf",
            "height": "100%",
            "opacity": 0.5,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "height": 20,
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 2.5,
                "height": 10,
                "marginBottom": 10,
                "width": "50%",
              },
              Object {
                "backgroundColor": undefined,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 2.5,
                "height": 10,
                "marginBottom": 10,
                "width": "30%",
              },
              Object {
                "backgroundColor": undefined,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        undefined,
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#efefef",
              "borderRadius": 13,
              "height": 52,
              "marginBottom": 52,
              "width": "100%",
            },
            Object {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "marginBottom": 8,
            },
            Object {
              "overflow": "hidden",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#dfdfdf",
              "height": "100%",
              "opacity": 0.5,
            }
          }
        />
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        Object {
          "marginBottom": 30,
        },
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 5,
                "height": 20,
                "marginBottom": 20,
                "width": "15%",
              },
              Object {
                "backgroundColor": undefined,
                "marginRight": 10,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 5,
                "height": 20,
                "marginBottom": 20,
                "width": "15%",
              },
              Object {
                "backgroundColor": undefined,
                "marginRight": 10,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 5,
                "height": 20,
                "marginBottom": 20,
                "width": "15%",
              },
              Object {
                "backgroundColor": undefined,
                "marginRight": 10,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 5,
                "height": 20,
                "marginBottom": 20,
                "width": "15%",
              },
              Object {
                "backgroundColor": undefined,
                "marginRight": 10,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`renders PostsPlaceholder without reactions 1`] = `
Array [
  <View
    style={
      Array [
        undefined,
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#efefef",
            "borderRadius": 10,
            "height": 20,
            "width": 20,
          },
          Object {
            "backgroundColor": undefined,
            "marginRight": 10,
          },
          Object {
            "overflow": "hidden",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#dfdfdf",
            "height": "100%",
            "opacity": 0.5,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "height": 20,
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 2.5,
                "height": 10,
                "marginBottom": 10,
                "width": "50%",
              },
              Object {
                "backgroundColor": undefined,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#efefef",
                "borderRadius": 2.5,
                "height": 10,
                "marginBottom": 10,
                "width": "30%",
              },
              Object {
                "backgroundColor": undefined,
              },
              Object {
                "overflow": "hidden",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#dfdfdf",
                "height": "100%",
                "opacity": 0.5,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      Array [
        undefined,
        Object {
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#efefef",
              "borderRadius": 13,
              "height": 52,
              "marginBottom": 52,
              "width": "100%",
            },
            Object {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "marginBottom": 8,
            },
            Object {
              "overflow": "hidden",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#dfdfdf",
              "height": "100%",
              "opacity": 0.5,
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;
